[tool.poetry]
name = "covid19snippets"
version = "0.1.0"
description = ""
authors = ["singularitti <singularitti@outlook.com>"]

[tool.poetry.dependencies]
python = "^3.6.1"
numpy = "^1.18.3"
matplotlib = "^3.2.1"
pandas = "^1.0.3"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
